--- a/include/clang/Basic/Version.inc.in
+++ b/include/clang/Basic/Version.inc.in
@@ -3,3 +3,8 @@
 #define CLANG_VERSION_MAJOR @CLANG_VERSION_MAJOR@
 #define CLANG_VERSION_MINOR @CLANG_VERSION_MINOR@
 #define CLANG_VERSION_PATCHLEVEL @CLANG_VERSION_PATCHLEVEL@
+
+#define KALMAR_VERSION_STRING "@KALMAR_VERSION_STRING@"
+#define KALMAR_VERSION_MAJOR @KALMAR_VERSION_MAJOR@
+#define KALMAR_VERSION_MINOR @KALMAR_VERSION_MINOR@
+#define KALMAR_VERSION_PATCH "@KALMAR_VERSION_PATCH@-@KALMAR_DRIVER_COMMIT@-@KALMAR_COMPILER_COMMIT@"
